# fastapi_celery_tutorial

./: .gitignore  README.md  celeryconfig.py  main.py  pyproject.toml  worker.py
templates/: index.html  job_started.html  job_status.html
